--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <!-- Game Container -->
     <div class="container">
       <h1>Simon Says</h1>
-      <p><span class="score">0</span> points</p>
+      <div class="scores">
+        <p>Current Score: <span id="score">0</span> points</p>
+        <p>High Score: <span id="highscore">0</span> points</p>
+      </div>
       <!-- Game Board -->
       <div class="gameboard">
-        <div class="tile1" id="tile1"></div>
-        <div class="tile2" id="tile2"></div>
-        <div class="tile3" id="tile3"></div>
-        <div class="tile4" id="tile4"></div>
+        <div id="tile1"></div>
+        <div id="tile2"></div>
+        <div id="tile3"></div>
+        <div id="tile4"></div>
       </div>
       <!-- Start Button -->
       <div class="begin" id="begin">Begin</div>
