--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </div>
       <!-- Game Board -->
       <div class="gameboard">
-        <div id="tile1"></div>
-        <div id="tile2"></div>
-        <div id="tile3"></div>
-        <div id="tile4"></div>
+        <div id="tile1" data-val="1"></div>
+        <div id="tile2" data-val="2"></div>
+        <div id="tile3" data-val="3"></div>
+        <div id="tile4" data-val="4"></div>
       </div>
       <!-- Start Button -->
-      <div class="begin" id="begin">Begin</div>
+      <button class="begin" id="begin">Begin</button>
     </div>
     <script src="app.js"></script>
   </body>
