Add beep but commented out
Added a beep sound, but commented it out because it is breaking the game

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
       <!-- Start Button -->
       <button class="begin" id="begin">Begin</button>
+      <!-- Beep Audio -->
+      <audio src="beep.wav" id="beep"></audio>
     </div>
     <script src="app.js"></script>
   </body>
