Add Game Over Screen

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <button class="begin" id="begin">Begin</button>
       <!-- Beep Audio -->
       <audio src="beep.wav" id="beep"></audio>
+      <!-- Game over -->
+      <div class="gameover" id="gameover" hidden>Game Over</div>
     </div>
     <script src="app.js"></script>
   </body>
