Remove unwanted hidden attribute

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- Beep Audio -->
       <audio src="beep.wav" id="beep"></audio>
       <!-- Game over -->
-      <div class="gameover" id="gameover" hidden>Game Over</div>
+      <div class="gameover" id="gameover">Game Over</div>
     </div>
     <script src="app.js"></script>
   </body>
